--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
 <body>
   <script>
     let img, imgBlur1, imgBlur2;
-    let sliderBlur1, sliderBlur2, applyButton, checkboc;
+    let sliderBlur1, sliderBlur2, applyButton, checkboxDoG, checkboxThreshold, sliderThreshold;
 
     function preload() {
         img = loadImage('/public/media/img/DSC06583.JPG'); // replace with your image path
@@ -14,23 +14,35 @@
 
     function setup() {
       createCanvas(img.width, img.height);
-      
+
+      var heights = img.height;
+
+      //text('hi', 10, heights += 30);
+
       // Create sliders for Gaussian blur levels
       sliderBlur1 = createSlider(1, 10, 1);
-      sliderBlur1.position(10, img.height + 10);
+      sliderBlur1.position(10, heights += 30);
       sliderBlur1.style('width', '200px');
 
-      checkbox = createCheckbox("Apply edge detection with DoG");
-      checkbox.position(10, img.height + 40);
+      checkboxDoG = createCheckbox("Apply edge detection with DoG");
+      checkboxDoG.position(10, heights += 30);
 
       sliderBlur2 = createSlider(1, 10, 2);
-      sliderBlur2.position(10, img.height + 70);
+      sliderBlur2.position(10, heights += 30);
       sliderBlur2.style('width', '200px');
       
+      checkboxThreshold = createCheckbox("Apply threshold");
+      checkboxThreshold.position(10, heights += 30);
+
+      sliderThreshold = createSlider(1, 30, 5);
+      sliderThreshold.position(10, heights += 30);
+      sliderThreshold.style('width', '200px');
+
       // Button to apply the blur settings
       applyButton = createButton('Apply Filter');
-      applyButton.position(10, img.height + 100);
+      applyButton.position(10, heights += 30);
       applyButton.mousePressed(applyDoG);
+
       
       // Display the original image at first
       image(img, 0, 0);
@@ -39,7 +51,7 @@
     function applyDoG() {
         imgBlur1 = gaussianBlur(img, sliderBlur1.value());
 
-        if (checkbox.checked()) {
+        if (checkboxDoG.checked()) {
 
             imgBlur2 = gaussianBlur(img, (sliderBlur1.value()*sliderBlur2.value()));
 
@@ -49,10 +61,22 @@
             imgBlur2.loadPixels();
 
             for (let i = 0; i < pixels.length; i += 4) {
+
                 pixels[i] = imgBlur1.pixels[i] - imgBlur2.pixels[i]; // Red
                 pixels[i + 1] = imgBlur1.pixels[i + 1] - imgBlur2.pixels[i + 1]; // Green
                 pixels[i + 2] = imgBlur1.pixels[i + 2] - imgBlur2.pixels[i + 2]; // Blue
                 pixels[i + 3] = 255; // Alpha
+
+                if (checkboxThreshold.checked()) {
+
+                    for( let j = 0 ; j < 3 ; j += 1){
+
+                        if( pixels[i + j] >= sliderThreshold.value() ) 
+                            pixels[i + j] = 255;
+                        else
+                            pixels[i + j] = 0;
+                    }
+                }
             }
 
         } else {
