--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,36 +15,37 @@
     function setup() {
       createCanvas(img.width, img.height);
 
-      var heights = img.height;
+      var heights = 0;
+      var widthFromImage = img.width + 30;
 
       //text('hi', 10, heights += 30);
 
       // Create sliders for Gaussian blur levels
       sliderBlur1 = createSlider(5, 50, 1);
-      sliderBlur1.position(10, heights += 30);
+      sliderBlur1.position(widthFromImage, heights += 30);
       sliderBlur1.style('width', '300px');
 
       checkboxDoG = createCheckbox("Apply edge detection with DoG");
-      checkboxDoG.position(10, heights += 30);
+      checkboxDoG.position(widthFromImage, heights += 30);
 
       sliderBlur2 = createSlider(1, 10, 2);
-      sliderBlur2.position(10, heights += 30);
+      sliderBlur2.position(widthFromImage, heights += 30);
       sliderBlur2.style('width', '300px');
       
       checkboxThreshold = createCheckbox("Apply threshold");
-      checkboxThreshold.position(10, heights += 30);
+      checkboxThreshold.position(widthFromImage, heights += 30);
 
       sliderThreshold = createSlider(1, 30, 5);
-      sliderThreshold.position(10, heights += 30);
+      sliderThreshold.position(widthFromImage, heights += 30);
       sliderThreshold.style('width', '300px');
 
       sliderThresholdScaler = createSlider(80, 100, 100);
-      sliderThresholdScaler.position(10, heights += 30);
+      sliderThresholdScaler.position(widthFromImage, heights += 30);
       sliderThresholdScaler.style('width', '300px');
 
       // Button to apply the blur settings
       applyButton = createButton('Apply Filter');
-      applyButton.position(10, heights += 30);
+      applyButton.position(widthFromImage, heights += 30);
       applyButton.mousePressed(applyDoG);
 
       
@@ -86,7 +87,7 @@
                 }
 
                 else {
-                    
+
                     pixels[i] = imgBlur1.pixels[i] - imgBlur2.pixels[i]; // Red
                     pixels[i + 1] = imgBlur1.pixels[i + 1] - imgBlur2.pixels[i + 1]; // Green
                     pixels[i + 2] = imgBlur1.pixels[i + 2] - imgBlur2.pixels[i + 2]; // Blue
